--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -80,3 +80,6 @@ mybatis-plus:
       logic-delete-value: 1 # 逻辑已删除值(默认为 1)
       logic-not-delete-value: 0 # 逻辑未删除值(默认为 0)
 
+WXMiniApp:
+  appID: wx98bd4a935aea8f5e
+  secret: 86850ed2543f11ad636b5781a25aa97f
